fix: fix overflowing paper cells

--- a/client/src/scss/hacks.scss
+++ b/client/src/scss/hacks.scss
@@ -88,6 +88,5 @@
 }
 
 .sessionBoard > * {
-  // https://stackoverflow.com/a/63471850
-  display: inline-grid;
+  overflow: hidden;
 }
